<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:id="@+id/login"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="@string/password"
        android:layout_below="@+id/login"
        android:textColorHint="@color/white"
        android:password="true"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:id="@+id/pass2"
        android:padding="10dp"
        android:drawableStart="@drawable/baseline_info_24"
        android:drawablePadding="5dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="@string/phone_number"
        android:layout_below="@id/pass2"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:id="@+id/number2"
        android:padding="10dp"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number2"
        android:layout_marginTop="50dp"
        android:id="@+id/btn2"
        android:background="@color/purple_500"
        android:layout_centerHorizontal="true"
        android:hint="@string/sing_in"
        android:textColor="@color/white" />



</RelativeLayout>