<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sing in !"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:id="@+id/sing"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="@string/user_name"
        android:layout_below="@+id/sing"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:id="@+id/usern"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="5dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="Password "
        android:layout_below="@+id/usern"
        android:textColorHint="@color/white"
        android:password="true"
        android:enabled="true"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:id="@+id/pass"
        android:padding="10dp"
        android:drawableStart="@drawable/baseline_info_24"
        android:drawablePadding="5dp"
        android:inputType="textPassword"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:hint="Phone Number  "
        android:layout_below="@id/pass"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:id="@+id/number"
        android:padding="10dp"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="5dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number"
        android:layout_marginTop="50dp"
        android:id="@+id/btn"
        android:background="@color/purple_500"
        android:layout_centerHorizontal="true"
        android:hint="@string/singin"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/all_ready_sing_in"
        android:textStyle="bold"
        android:layout_below="@id/btn"
        android:id="@+id/allreadysingin"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/white"


        />


</RelativeLayout>